--- a/Cookify.DataAccess/Cookify.DataAccess.csproj
+++ b/Cookify.DataAccess/Cookify.DataAccess.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cookify.Models\Cookify.Models.csproj" />
+  </ItemGroup>
+
 </Project>
