--- a/Cookify/Cookify.csproj
+++ b/Cookify/Cookify.csproj
@@ -11,4 +11,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cookify.DataAccess\Cookify.DataAccess.csproj" />
+    <ProjectReference Include="..\Cookify.Models\Cookify.Models.csproj" />
+  </ItemGroup>
+
 </Project>
