--- a/Cookify.Web/Cookify.Web.csproj
+++ b/Cookify.Web/Cookify.Web.csproj
@@ -2,7 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\webpack.config.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\webpack.config.js" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
