--- a/Cookify.Web/Cookify.Web.csproj
+++ b/Cookify.Web/Cookify.Web.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="wwwroot\webpack.config.js" />
   </ItemGroup>
 
